@@ -22,48 +22,29 @@
 
 (define (raise-continuable obj)
   (let ((save (current-handler:get)))
-    (try-finally
-     (begin
-       (current-handler:set save:outer)
-       (save:handlerProc obj))
-     (current-handler:set save))))
-
-(define-syntax simple-guard
-  (syntax-rules ()
-    ((guard (var clause ...) e1 e2 ...)
-     (try-catch
-      (begin e1 e2 ...)
-      (ex java.lang.Throwable
-          (let ((var (ExceptionWithValue:unwrap ex)))
-            (guard-aux
-             (primitive-throw ex)
-             clause ...)))))))
+    (if (eq? save #!null) ;; i.e. current-handler comes from a guard
+        (raise obj)
+        (try-finally
+         (begin
+           (current-handler:set save:outer)
+           (save:handlerProc obj))
+         (current-handler:set save)))))
 
 (define-syntax guard
   (syntax-rules ()
     ((guard (var clause ...) e1 e2 ...)
-     ((call/cc
-       (lambda (guard-k)
-         (with-exception-handler
-          (lambda (condition)
-            ((call/cc
-              (lambda (handler-k)
-                (guard-k
-                 (lambda ()
-                   (let ((var condition))
-                     (guard-aux
-                      (handler-k
-                       (lambda ()
-                         (raise-continuable condition)))
-                      clause ...))))))))
-          (lambda ()
-            (call-with-values
-                (lambda () e1 e2 ...)
-              (lambda args
-                (guard-k
-                 (lambda ()
-                   (apply values args)))))))))))))
-
+     (let ((save (current-handler:get)))
+       (try-finally
+        (try-catch
+         (begin
+           (current-handler:set #!null)
+           e1 e2 ...)
+         (ex java.lang.Throwable
+             (let ((var (ExceptionWithValue:unwrap ex)))
+               (guard-aux
+                (primitive-throw ex)
+                clause ...))))
+        (current-handler:set save))))))
 
 (define-syntax guard-aux
   (syntax-rules (else =>)
